--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2024-10-07-fade-in-view",
+  "name": "2024-10-07-fade-up-component",
   "version": "0.1.0",
   "private": true,
   "scripts": {
